--- a/README.DA
+++ b/README.DA
@@ -29,7 +29,7 @@ V3.7 Release Notes :
 Version 3.7 was released on April 20, 2015.
 
   For more information on WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
   New features:
 
@@ -53,7 +53,7 @@ V3.6.1 Release Notes :
 Version 3.6.1 was released on August 14, 2014.
 
   For more information about WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
   Updated features:
 
@@ -66,7 +66,7 @@ Version 3.6.1 was released on August 14, 2014.
         - Many other minor problems
     - WRFPLUS has been upgraded to V3.6.1
 
-See http://www.mmm.ucar.edu/wrf/users/wrfda/updates-3.6.1.html for a full list of updates
+See http://www2.mmm.ucar.edu/wrf/users/wrfda/updates-3.6.1.html for a full list of updates
 
 ======================================
 V3.6 Release Notes :
@@ -75,7 +75,7 @@ V3.6 Release Notes :
 Version 3.6 was released on April 18, 2014.
 
   For more information on WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
   New features:
 
@@ -105,7 +105,7 @@ V3.5.1 Release Notes :
 Version 3.5.1 is released on September 23, 2013.
 
   For more information on WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
 
   The following bugs have been fixed:
@@ -124,7 +124,7 @@ V3.5 Release Notes :
 Version 3.5 is released on April 18. 2013.
 
   For more information on WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
   New features:
 
@@ -152,7 +152,7 @@ V3.4.1 Release Notes :
 Version 3.4.1 is released on August 16, 2012.
 
 - For more information on WRFDA, visit the WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
 
 - WRFDA registry files have been reconstructed.
   Default namelist settings are now in registry.var file.
@@ -267,7 +267,7 @@ V3.1 Release Notes:
 Version 3.1 is released on April 9, 2009.
 
 - For more information on WRFDA, visit the new WRFDA Users home page
-  http://www.mmm.ucar.edu/wrf/users/wrfda/index.html
+  http://www2.mmm.ucar.edu/wrf/users/wrfda/index.html
   and read the online User's Gudie.
 
 - 4DVAR and radiance data assimilation capabilities are included in V3.1.
@@ -302,7 +302,7 @@ Version 3.1 is released on April 9, 2009.
 
 - Most of the scripts under WRFDA/var/scripts are removed from the main source
   code tar file. They can still be downloaded separately.
-  See http://www.mmm.ucar.edu/wrf/users/wrfda/download/tools.html
+  See http://www2.mmm.ucar.edu/wrf/users/wrfda/download/tools.html
 
 For questions, send mail to wrfhelp@ucar.edu
 
