--- a/test/em_hill2d_x/extras/namelist.input-700m_hill-15mps-n^2=0.0001-25km_deep-15km_damping-dampcoef=0.08-etac=0.2
+++ b/test/em_hill2d_x/extras/namelist.input-700m_hill-15mps-n^2=0.0001-25km_deep-15km_damping-dampcoef=0.08-etac=0.2
@@ -78,7 +78,7 @@
  v_sca_adv_order                     = 3,
  non_hydrostatic                     = .true.,
  hybrid_opt                          = 2,
- run_hours                           = 0.2,
+ etac                                = 0.2,
  /
 
  &bdy_control
