This is a test as a non-collaborator

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 WRF Model Version 4.0 (June 8, 2018)
 http://wrf-model.org/users/users.php
 
-------------------------
+TEST2
+
 WRF PUBLIC DOMAIN NOTICE
 ------------------------
 
