--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-WRF Model Version 4.0.2 (November 9, 2018)
+WRF Model Version 4.0.2 (November 9, 2018) #test
 
 http://www2.mmm.ucar.edu/wrf/users/
 
